--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,10 @@ asgiref==3.8.1
 beautifulsoup4==4.12.3
 Django==5.0.4
 django-bootstrap4==24.3
+django-cleanup==8.1.0
+django-ranged-response==0.2.0
+django-simple-captcha==0.6.0
+easy-thumbnails==2.8.5
+pillow==10.3.0
 soupsieve==2.5
 sqlparse==0.5.0
